--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.0",
-    "sequelize": "^6.32.1",
-    "tedious": "^16.4.0"
+    "tedious": "^16.4.0",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
+    "mysql2": "^3.6.0",
+    "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   }
 }
